--- a/src/Node.MSBuild.nuspec
+++ b/src/Node.MSBuild.nuspec
@@ -9,9 +9,10 @@
     <licenseUrl>https://raw.githubusercontent.com/nobuoka/Node.MSBuild/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/nobuoka/Node.MSBuild</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>This project provides MSBuild target to set up Node.js.</description>
-    <releaseNotes>This sets up Node.js 5.2.0 by default. The version of Node.js to be set up is able to be specified by a MSBuild property.
-Some bugs are fixed from version 1.0.0.</releaseNotes>
+    <description>This NuGet package provides MSBuild targets to set up Node.js.</description>
+    <releaseNotes>New MSBuild property `NodeCommandWithNodePathSetting` is introduced.
+
+This sets up Node.js 5.2.0 by default. The version of Node.js to be set up is able to be specified by a MSBuild property.</releaseNotes>
     <copyright>Copyright 2015 Yu Nobuoka</copyright>
     <tags>JavaScript JS Node.js Node</tags>
   </metadata>
